contact route - swagger update
